- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    wmfsm.desktop -> 1.5

--- a/wmfsm.desktop
+++ b/wmfsm.desktop
@@ -3,6 +3,6 @@ Name=WmFsm
 Comment=Disk free space Monitor
 Comment[pl]=Monitor wolnej przestrzeni dysku
 Exec=wmfsm
-Terminal=0
+Terminal=false
 Type=Application
 # vi: encoding=utf-8
