--- a/wmfsm.desktop
+++ b/wmfsm.desktop
@@ -6,4 +6,6 @@ Comment[pl]=Monitor wolnej przestrzeni dysku
 Exec=wmfsm
 Terminal=false
 Type=Application
+Categories=Applet;
+NotShowIn=GNOME;KDE;
 # vi: encoding=utf-8
